streamlining login guide

--- a/docs/login.mdx
+++ b/docs/login.mdx
@@ -19,7 +19,7 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 
 - You have an active NetID
 - You have completed the required [BadgerCompute Certification Course](/get-started/#canvas-course)
-    - **Annual renewal may be required.**
+    - Annual renewal may be required.
 
 
 ## Step-by-step login
@@ -32,14 +32,14 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 
 2. **Click “Sign in with your UW-Madison NetID”**
 
-    You’ll be redirected to the **UW-Madison Single sign-on** login page. Login with your NetID and password.
+    You’ll be redirected to the UW-Madison Single sign-on login page. Login with your NetID and password.
     
     ![Welcome-light](/docs/login-guide/Welcome-to-BadgerCompute-light.png)
     ![Welcome-dark](/docs/login-guide/Welcome-to-BadgerCompute-Dark.png)
 
 3. **Return to BadgerCompute**
 
-    After successful SSO, you’ll land back on the **JupyterHub** page for BadgerCompute.
+    After successful SSO, you’ll land back on the JupyterHub page for BadgerCompute.
     
     ![Image title](/docs/login-guide/netid-login.png)
 
@@ -72,7 +72,7 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 
 8. **Wait for the server to start**
 
-    You’ll see **“Your server is starting up…”** for ~30–90 seconds (longer during peak times). When ready, you’ll land in **JupyterLab**.
+    You’ll see “Your server is starting up…” for ~30–90 seconds (longer during peak times). When ready, you’ll land in JupyterLab.
     
     ![Image title](/docs/login-guide/notebook-starting-light.png#only-light)
     ![Image title](/docs/login-guide/notebook-starting-dark.png#only-dark)
