Add support for light dark images
Move all images to optimized alts

--- a/docs/login.mdx
+++ b/docs/login.mdx
@@ -38,7 +38,6 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
     You’ll be redirected to the UW-Madison Single sign-on login page. Login with your NetID and password.
     
     ![Welcome-light](/docs/login-guide/Welcome-to-BadgerCompute-light.png)
-    ![Welcome-dark](/docs/login-guide/Welcome-to-BadgerCompute-Dark.png)
 
 3. **Return to BadgerCompute**
 
@@ -67,8 +66,7 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
      * Other Docker image (advanced)
      * Build your own image (advanced)
 
-     ![Image title](/docs/login-guide/select-notebook-template-light.png#only-light)
-     ![Image title](/docs/login-guide/select-notebook-template-dark.png#only-dark)
+     ![Image title](/docs/login-guide/select-notebook-template-light.png)
    
      Select the option that fits your workload and click **Start**.
 
@@ -77,8 +75,7 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 
     You’ll see “Your server is starting up…” for ~30–90 seconds (longer during peak times). When ready, you’ll land in JupyterLab.
     
-    ![Image title](/docs/login-guide/notebook-starting-light.png#only-light)
-    ![Image title](/docs/login-guide/notebook-starting-dark.png#only-dark)
+    ![Image title](/docs/login-guide/notebook-starting-light.png)
 
 
 		<AlertDropDown title={'If it takes too long'} severity="warning" defaultOpen={true}>
