Update information on the currently available GPUs

--- a/app/policies/policies.mdx
+++ b/app/policies/policies.mdx
@@ -64,7 +64,7 @@ Users should not expect to exceed the following resource allocation per notebook
 
 * **CPU**: 4 cores
 * **Memory**: 16 GB RAM
-* **GPUs** (if requested): 5 - 10GB of GPU RAM, [capability 7.5 or 8.0](https://developer.nvidia.com/cuda-gpus)
+* **GPU** (if requested): NVIDIA GeForce RTX 2080 Ti, 10GB of GPU RAM, [capability 7.5](https://developer.nvidia.com/cuda-gpus)
 
 ## Privacy Notice
 
